# netbox-circuit-prefix-link

./: README.md  pyproject.toml
netbox_circuit_prefix_link/: __init__.py  core_table_extensions.py  filtersets.py  forms.py  models.py  tables.py  template_content.py  urls.py  views.py
netbox_circuit_prefix_link/api/: serializers.py  urls.py  views.py
netbox_circuit_prefix_link/migrations/: 0001_initial.py
netbox_circuit_prefix_link/templates/netbox_circuit_prefix_link/inc/: circuit_panel.html  ipaddress_panel.html  prefix_panel.html
netbox_circuit_prefix_link/tests/: fixtures.py  test_api.py  test_core_table_extensions.py  test_forms.py  test_models.py  test_template_content.py
