[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-circuit-prefix-link"
version = "0.1.0"
description = "Link NetBox Circuits to Prefixes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Avery Abbott", email = "Avery.Abbott@veteransunited.com" }]
classifiers = [
  "Framework :: Django",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["netbox_circuit_prefix_link*"]

[tool.setuptools.package-data]
netbox_circuit_prefix_link = ["templates/**/*.html"]
